--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Repertorio</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -14,7 +14,7 @@
 
   <body>
     <div id="AgregarCancion">
-      <h2 class="pt-3">&#119070; Mi repertorio &#119070;</h2>
+      <h2 class="pt-3">&#119070; <big><strong>Mi Repertorio</strong></big> &#119070;</h2>
 
       <div class="container pt-5 w-50">
         <div>
@@ -66,7 +66,7 @@
     <div id="ListaCanciones">
       <hr />
       <hr />
-      <h2>Tabla de canciones &#127908;</h2>
+      <h2><big><strong>Tabla de canciones</strong></big> &#127908;</h2>
 
       <div class="container pt-5 w-75">
         <table class="table table-dark">
@@ -96,7 +96,7 @@
 </style>
 
 <script>
-  let url = "/canciones"; // Primer GET
+  let url = "/canciones";
   let tbody = document.getElementById("cuerpo");
   let cancion = document.getElementById("cancion");
   let artista = document.getElementById("artista");
