finalizacion del desafio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Repertorio</title>
+    <title>Repertorio🎤</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -90,7 +90,7 @@
 <style>
   body {
     text-align: center;
-    background: #283593;
+    background: #071374e8;
     color: white;
   }
 </style>
